מחשבון קומבינציות חתיכות עץ

--- a/js-projects/wood-calc/index.html
+++ b/js-projects/wood-calc/index.html
@@ -17,11 +17,13 @@
                 על הכלי</button>
             <div id="full-instructions">
                 <p>
-                    הממשק הזה עוזר לחשב את הקומבינציות האפשריות של חתיכות עץ באורכים שונים, כדי לעזור בתכנון מוצר ולעמוד בדרישות גודל.
-                    
-                    כדי לראות אילו קומבינציות מתאימות לגודל מסוים או טווח אורך, יש להזין את מספר החתיכות והגדלים שלהן, להגדיר את טווח האורך
+                    הממשק הזה עוזר לחשב את הקומבינציות האפשריות של חתיכות עץ באורכים שונים, כדי לעזור בתכנון מוצר ולעמוד
+                    בדרישות גודל.
+
+                    כדי לראות אילו קומבינציות מתאימות לגודל מסוים או טווח אורך, יש להזין את מספר החתיכות והגדלים שלהן,
+                    להגדיר את טווח האורך
                     המינימלי והמקסימלי, וללחוץ על כפתור "חישוב".
-                    
+
                     התוצאות יופיעו למטה, עם פירוט של כל קומבינציה וכמות החתיכות מכל גודל.
                 </p>
             </div>
@@ -40,12 +42,31 @@
         <div class="input-group">
             <label>גדלים:</label>
             <div class="size-inputs-container">
-                <input type="number" class="size-input" value="3.3" step="0.1">
-                <input type="number" class="size-input" value="4.4" step="0.1">
-                <input type="number" class="size-input" value="6.8" step="0.1">
-                <input type="number" class="size-input" value="9.2" step="0.1">
-                <input type="number" class="size-input" value="14.2" step="0.1">
-                <input type="number" class="size-input" value="19.0" step="0.1">
+                <div>
+                    <input type="checkbox" class="exclude-checkbox" title="שימוש בקורה זו" checked>
+                    <input type="number" class="size-input" value="3.3" step="0.1">
+                </div>
+                <div>
+                    <input type="checkbox" class="exclude-checkbox" title="שימוש בקורה זו" checked>
+                    <input type="number" class="size-input" value="4.4" step="0.1">
+                </div>
+                <div>
+                    <input type="checkbox" class="exclude-checkbox" title="שימוש בקורה זו" checked>
+                    <input type="number" class="size-input" value="6.8" step="0.1">
+                </div>
+                <div>
+                    <input type="checkbox" class="exclude-checkbox" title="שימוש בקורה זו" checked>
+                    <input type="number" class="size-input" value="9.2" step="0.1">
+                </div>
+                <div>
+                    <input type="checkbox" class="exclude-checkbox" title="שימוש בקורה זו" checked>
+                    <input type="number" class="size-input" value="14.2" step="0.1">
+                </div>
+                <div>
+                    <input type="checkbox" class="exclude-checkbox" title="שימוש בקורה זו" checked>
+                    <input type="number" class="size-input" value="19.0" step="0.1">
+                </div>
+
 
             </div>
         </div>
