--- a/js-projects/wood-calc/index.html
+++ b/js-projects/wood-calc/index.html
@@ -39,7 +39,7 @@
             <input type="number" id="num-pieces" value="6">
         </div>
 
-        <div class="input-group">
+        <div class="input-group collumn">
             <label>גדלים:</label>
             <div class="size-inputs-container">
                 <div>
