Implement code changes to enhance functionality and improve performance

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <p> הגבול היחיד הוא הדמיון.</p>
             </p>
 
-            <a class="button" href="Star Cohen english CV.docx" download="Star Cohen english CV.docx">הורדת קורות
+            <a class="button" href="Star Cohen CV.pdf" download="Star Cohen CV.pdf">הורדת קורות
                 חיי</a>
         </div>
 
