Update README and HTML structure; refine CSS for icon styling

--- a/index.html
+++ b/index.html
@@ -21,8 +21,13 @@
         <ul class="horizontalNav left">
             <li><a href="#about">אודותיי</a></li>
             <li><a href="#langs">השפות שלי</a></li>
-            <li><a href="#projects">תיק העבודות </a></li>
-            <li><a href="#contact">צרו קשר</a></li>
+            <!-- <li><a href="#projects">תיק העבודות </a></li> -->
+            <li><a href="#css-projects"> עבודות HTML ו-CSS</a></li>
+            <li><a href="#js-projects"> עבודות JavaScript </a></li>
+            <!-- <li><a href="#contact">צרו קשר</a></li> -->
+
+            <!-- link to github -->
+            <li><a href="https://github.com/Star69995/star-site" target="_blank"><i class="fa-brands fa-github"></i></a></li>
         </ul>
         <ul class="horizontalNav right">
             <li><a href="#">
@@ -46,8 +51,9 @@
             <i class="fa-brands fa-html5" title="HTML"></i>
             <i class="fa-brands fa-css3-alt" title="CSS"></i>
             <i class="fa-brands fa-js" title="JavaScript"></i>
-            <i class="fa-brands fa-python" title="Python"></i>
             <!-- <i class="fa-brands fa-react" title="React"></i> -->
+            <i class="fa-brands fa-python" title="Python"></i>
+
 
         </div>
 
@@ -67,7 +73,7 @@
         </div>
 
 
-        <section class="strip darker">
+        <section class="strip darker" id="css-projects">
             <div>
                 <h2>עבודות HTML ו-CSS</h2>
             </div>
@@ -86,7 +92,7 @@
             </div>
         </section>
 
-        <section class="strip darker">
+        <section class="strip darker" id="js-projects">
             <div>
                 <h2>עבודות JavaScript </h2>
             </div>
@@ -103,10 +109,7 @@
             </div>
         </section>
 
-        <div class="strip form-container">
-
-
-
+        <!-- <div class="strip form-container">
             <form>
                 <h2 id="contact">צרו קשר</h2>
                 <p>רוצים אתר משלכם? השאירו פרטים.</p>
@@ -135,14 +138,14 @@
                 <p class="form-message hidden">תודה על מילוי הפרטים. שירות זה יהיה זמין בקרוב.</p>
             </form>
             <img src="img/letter.png">
-        </div>
-        
+        </div> -->
+
 
 
 
     </section>
     <footer>
-        <p>נבנה, עוצב וצויר על ידי <b>סטאר</b>, כל הזכויות שמורות 2024.</p>
+        <p>נבנה, עוצב וצויר על ידי <b>סטאר</b>, כל הזכויות שמורות 2025.</p>
     </footer>
 
     <script src="script.js"></script>
