Refactor HTML structure for better readability; enhance CSS styles for icons and navigation

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             <!-- <li><a href="#contact">צרו קשר</a></li> -->
 
             <!-- link to github -->
-            <li><a href="https://github.com/Star69995/star-site" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+            <li><a href="https://github.com/Star69995/star-site" target="_blank"><i class="fa-brands fa-github"></i></a>
+            </li>
         </ul>
         <ul class="horizontalNav right">
             <li><a href="#">
@@ -48,10 +49,16 @@
         </div>
 
         <div class="strip icons langs" id="langs">
-            <i class="fa-brands fa-html5" title="HTML"></i>
-            <i class="fa-brands fa-css3-alt" title="CSS"></i>
+
+            <!-- Frontend -->
+            <i class="fa-brands fa-html5" title="HTML5"></i>
+            <i class="fa-brands fa-css3-alt" title="CSS3"></i>
             <i class="fa-brands fa-js" title="JavaScript"></i>
-            <!-- <i class="fa-brands fa-react" title="React"></i> -->
+            <i class="fa-brands fa-react" title="React"></i>
+
+            <!-- Backend -->
+            <i class="fa-brands fa-node" title="Node.js"></i>
+            <i class="fa-solid fa-database" title="Databases (SQL & MongoDB)"></i>
             <i class="fa-brands fa-python" title="Python"></i>
 
 
